Fix mod overlow in plug drawer on mobile.

--- a/src/app/loadout/plug-drawer/Footer.m.scss
+++ b/src/app/loadout/plug-drawer/Footer.m.scss
@@ -6,9 +6,11 @@
 }
 
 .selectedMods {
-  composes: flexWrap from '../../dim-ui/common.m.scss';
+  display: flex;
+  flex-direction: row;
   flex: 1;
   align-items: center;
+  overflow: auto;
   height: var(--item-size);
 
   > * {
